--- a/src/LCTFCommander/MainWindow.xaml
+++ b/src/LCTFCommander/MainWindow.xaml
@@ -13,11 +13,12 @@
 		<vc:BooleanAndConverter x:Key="BooleanAndConverter" />
 	</Window.Resources>
 	<DockPanel LastChildFill="True">
-		<Menu DockPanel.Dock="Top">
+		<Menu DockPanel.Dock="Top" Background="Transparent">
 			<MenuItem Header="Help">
 				<MenuItem Header="About" Click="HelpMenu_Click"/>
 			</MenuItem>
 		</Menu>
+		<Separator DockPanel.Dock="Top"/>
 		<DockPanel DockPanel.Dock="Top" Background="Transparent">
 			<Viewbox DockPanel.Dock="Right" Height="30" Margin="23" VerticalAlignment="Top">
 				<ContentPresenter ContentTemplate="{StaticResource WordmarkLogo}"/>
@@ -34,16 +35,26 @@
 							<RowDefinition Height="Auto"/>
 							<RowDefinition Height="Auto"/>
 							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="Auto"/>
 						</Grid.RowDefinitions>
 						<TextBlock Text="Serial number:" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right"/>
 						<TextBlock Text="Firmware:" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right"/>
 						<TextBlock Text="Temperature:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right"/>
 						<TextBlock Text="State:" Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right"/>
-
+						<TextBlock Text="Spectral Range:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right"/>
 						<TextBlock Text="{Binding SelectedLCTF.SerialNumber, FallbackValue=N/A}" Grid.Column="1" Grid.Row="0" Margin="5,0,0,0"/>
 						<TextBlock Text="{Binding SelectedLCTF.FirmwareVersion, FallbackValue=N/A}"  Grid.Column="1" Grid.Row="1" Margin="5,0,0,0"/>
 						<TextBlock Text="{Binding SelectedLCTF.Temperature, StringFormat={}{0:0.00} °C, FallbackValue=N/A}" Grid.Column="1" Grid.Row="2" Margin="5,0,0,0"/>
 						<TextBlock Text="{Binding SelectedLCTF.CurrentState, FallbackValue=N/A}" Grid.Column="1" Grid.Row="3" Margin="5,0,0,0"/>
+						<TextBlock Grid.Column="1" Grid.Row="4" Margin="5,0,0,0">
+							<TextBlock.Text>
+								<MultiBinding StringFormat="{}{0}nm to {1}nm, {2}nm steps" FallbackValue="N/A">
+									<Binding Path="SelectedLCTF.MinWavelength" />
+									<Binding Path="SelectedLCTF.MaxWavelength" />
+									<Binding Path="SelectedLCTF.StepWavelength" />
+								</MultiBinding>
+							</TextBlock.Text>
+						</TextBlock>
 					</Grid>
 				</GroupBox>
 
