--- a/src/LCTFCommander/AboutWindow.xaml
+++ b/src/LCTFCommander/AboutWindow.xaml
@@ -5,21 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LCTFCommander"
         mc:Ignorable="d"
-        Title="AboutWindow" Height="270" Width="500" ResizeMode="NoResize">
+        Title="About" Height="270" Width="500" ResizeMode="NoResize">
     <DockPanel Margin="10">
 		<DockPanel DockPanel.Dock="Top">
 			<Viewbox DockPanel.Dock="right" Height="80" Margin="16" HorizontalAlignment="Left">
 				<ContentPresenter ContentTemplate="{StaticResource FullLogo}"/>
 			</Viewbox>
 			<DockPanel>
-				<Label DockPanel.Dock="Top" HorizontalAlignment="Left" FontSize="22" Content="{Binding ProductName, FallbackValue=LCTF Commander}"/>
-				<Label DockPanel.Dock="Top" HorizontalAlignment="Left" Content="{Binding ProductVersion, FallbackValue=1.0}" ContentStringFormat="v{0}"/>
-				<Label DockPanel.Dock="Top" HorizontalAlignment="Left" Content="{Binding Copyright, FallbackValue=Copyright © 2020}"/>
-				<Label DockPanel.Dock="Top" HorizontalAlignment="Left" Content="{Binding CompanyName, FallbackValue=ChemImage Corporation}"/>
-				<TextBlock DockPanel.Dock="Top" Padding="5" HorizontalAlignment="Left" Text="This software uses a library from LibUsbDotNet licensed under the LGPL-3" TextWrapping="Wrap"/>
+				<TextBlock DockPanel.Dock="Top" HorizontalAlignment="Left" FontSize="22" Text="{Binding ProductName, FallbackValue=LCTF Commander}" Margin="5,0,0,0"/>
+				<TextBlock DockPanel.Dock="Top" HorizontalAlignment="Left" Text="{Binding ProductVersion, FallbackValue=v1.0, StringFormat=v{}{0}}" Margin="5,0,0,0"/>
+				<TextBlock DockPanel.Dock="Top" HorizontalAlignment="Left" Text="{Binding Copyright, FallbackValue=Copyright © 2020}" Margin="5,0,0,0"/>
+				<TextBlock DockPanel.Dock="Top" HorizontalAlignment="Left" Text="{Binding CompanyName, FallbackValue=ChemImage Corporation}" Margin="5,0,0,0"/>
+				
 			</DockPanel>
 		</DockPanel>
-		
+		<DockPanel DockPanel.Dock="Bottom">
+			<TextBlock DockPanel.Dock="Top" Padding="5" HorizontalAlignment="Left" Text="LibUsbDotNet licensed under the LGPL-3. Copyright © 2006-2010 Travis Robinson." TextWrapping="Wrap"/>
+			<TextBlock DockPanel.Dock="Top" Padding="5" HorizontalAlignment="Left" Text="WPF Toolkit is licensed under the MS-PL. Copyright © 2007-2018 Xceed Software Inc." TextWrapping="Wrap"/>
+		</DockPanel>
 		<TextBox Text="{Binding ProductDescription, FallbackValue=LCTF Commander}" Margin="5" />
 	</DockPanel>
 </Window>
