Removed options UI from installer. Made installer use version from Commander. Updated commander version to 1.1.

--- a/Installer/SdkBootstrapper/Bundle.wxs
+++ b/Installer/SdkBootstrapper/Bundle.wxs
@@ -19,6 +19,7 @@
 	        IconSourceFile="$(var.Commander_ProjectDir)icon.ico" >
 		<BootstrapperApplicationRef Id="WixStandardBootstrapperApplication.RtfLicense">
 			<bal:WixStandardBootstrapperApplication
+			SuppressOptionsUI="yes"
             LicenseFile="MITLicense.rtf"
             LogoFile="install-logo.png"
             />
